--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,3 +1,6 @@
-h1 {
-  color: red;
-}
+@import "mixins.scss";
+@import "variables.scss";
+@import "normalize.scss";
+@import "fonts.scss";
+@import "general.scss";
+
