--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -2,3 +2,4 @@ $mobile-width: 767px;
 $tablet-width: 1199px;
 $roboto-condensed: "Roboto Condensed", "Arial", sans-serif;
 $bebas: "Bebas Neue", "Arial", sans-serif;
+$white-color: #ffffff;
