Начат второй блок

--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -3,3 +3,4 @@ $tablet-width: 1199px;
 $roboto-condensed: "Roboto Condensed", "Arial", sans-serif;
 $bebas: "Bebas Neue", "Arial", sans-serif;
 $white-color: #ffffff;
+$dark-blue-color: #102654;
