--- a/source/sass/fonts.scss
+++ b/source/sass/fonts.scss
@@ -1,4 +1,12 @@
 @font-face {
+  font-weight: 300;
+  font-family: "Roboto Condensed";
+  font-style: normal;
+  font-display: swap;
+  src: url("../fonts/RobotoCondensed-Light.woff2") format("woff2"), url("../fonts/RobotoCondensed-Light.woff") format("woff");
+}
+
+@font-face {
   font-weight: 400;
   font-family: "Roboto Condensed";
   font-style: normal;
