Начат блок соревнования

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -6,5 +6,7 @@
 @import "blocks/intro.scss";
 @import "blocks/gym.scss";
 @import "blocks/subscriptions.scss";
+@import "blocks/competitions.scss";
+
 
 
