--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -4,3 +4,4 @@ $roboto-condensed: "Roboto Condensed", "Arial", sans-serif;
 $bebas: "Bebas Neue", "Arial", sans-serif;
 $white-color: #ffffff;
 $dark-blue-color: #102654;
+$red-color: #ed0233;
