--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -7,6 +7,8 @@
 @import "blocks/gym.scss";
 @import "blocks/subscriptions.scss";
 @import "blocks/competitions.scss";
+@import "blocks/coaches.scss";
+
 
 
 
