--- a/source/sass/blocks/subscriptions.scss
+++ b/source/sass/blocks/subscriptions.scss
@@ -5,12 +5,12 @@
   &::after {
     content: "";
     display: block;
-    width: 321px;
-    height: 384px;
+    width: 287px;
+    height: 494px;
     background: url("../img/flapjacks-desktop.png") no-repeat center;
     position: absolute;
-    bottom: -97px;
-    right: -18px;
+    bottom: -150px;
+    right: 0;
     z-index: 1;
   }
 }
