--- a/source/sass/blocks/gym.scss
+++ b/source/sass/blocks/gym.scss
@@ -4,6 +4,13 @@
   padding: 120px 103px 120px 163px;
 }
 
+.gym__photo-tablet,
+.gym__photo-mobile,
+.gym__video-tablet,
+.gym__video-mobile {
+  display: none;
+}
+
 .gym__title {
   color: $dark-blue-color;
   font-family: $bebas;
@@ -47,21 +54,21 @@
   flex-direction: column;
 }
 
-.gym__video {
+.gym__video-container {
   position: relative;
   height: 228px;
   width: 364px;
   margin-right: 359px;
-  margin-top: -120px;
+  margin-top: -114px;
 }
 
-.gym__video img {
+.gym__video-container img {
   position: absolute;
   top: 0;
   left: 0;
 }
 
-.gym__video button {
+.gym__video-container button {
   position: relative;
   display: block;
   margin: 65px auto 0;
@@ -83,6 +90,18 @@
     @include wrap-tablet;
     padding: 97px 45px 100px;
     flex-direction: column;
+  }
+
+  .gym__photo-desktop,
+  .gym__photo-mobile,
+  .gym__video-desktop,
+  .gym__video-mobile {
+    display: none;
+  }
+
+  .gym__photo-tablet,
+  .gym__video-tablet {
+    display: block;
   }
 
   .gym__title {
@@ -111,19 +130,14 @@
     align-items: center;
   }
 
-  .gym__photo {
-    width: 678px;
-    height: 345px;
-  }
-
-  .gym__video {
+  .gym__video-container {
     height: 167px;
     width: 266px;
     margin-right: 0;
-    margin-top: -90px;
+    margin-top: -84px;
   }
 
-  .gym__video img {
+  .gym__video-container img {
     height: 167px;
   }
 
@@ -131,7 +145,7 @@
     display: none;
   }
 
-  .gym__video button {
+  .gym__video-container button {
     margin: 48px auto 0;
     width: 73px;
     height: 73px;
@@ -156,6 +170,19 @@
     margin: 0;
   }
 
+  .gym__photo-desktop,
+  .gym__photo-tablet,
+  .gym__video-desktop,
+  .gym__video-tablet {
+    display: none;
+  }
+
+  .gym__photo-mobile,
+  .gym__video-mobile {
+    display: block;
+    width: 100%;
+  }
+
   .gym__description-container {
     padding: 0 15px;
   }
@@ -171,21 +198,8 @@
     text-align: left;
   }
 
-  .gym__photo {
+  .gym__video-container {
     width: 100%;
-    height: 313px;
-  }
-
-  .gym__photo-picture {
-    width: 100%;
-  }
-
-  .gym__video {
-    width: 100%;
-    margin-top: 34px;
-  }
-
-  .gym__video img {
-    width: 100%;
+    margin-top: 40px;
   }
 }
