--- a/source/sass/blocks/coaches.scss
+++ b/source/sass/blocks/coaches.scss
@@ -9,7 +9,7 @@
   line-height: 49px;
   letter-spacing: 0.03em;
   color: $dark-blue-color;
-  margin: 0 0 62px 0;
+  margin: 0 0 54px 0;
 }
 
 .coaches__info {
@@ -19,15 +19,17 @@
 .coaches__list {
   @include list-default;
   display: flex;
-  flex-direction: nowrap;
-  justify-content: space-between;
+  flex-wrap: nowrap;
+  justify-content: flex-start;
 }
 
 .coaches__item {
   position: relative;
-  width: 260px;
-  height: 294px;
+  width: 22.4%;
+  min-height: 294px;
   cursor: pointer;
+  margin-right: 40px;
+  margin-bottom: 40px;
 
   &:hover {
     .coaches__info {
@@ -36,13 +38,17 @@
   }
 }
 
+.coaches__item:last-child {
+  margin-right: 0;
+}
+
 .coaches__photo {
   position: absolute;
   top: 0;
   left: 0;
   z-index: -1;
-  width: 260px;
-  height: 294px;
+  width: 100%;
+  height: 100%;
 }
 
 .coaches__name,
@@ -50,24 +56,24 @@
   font-family: $roboto-condensed;
   font-weight: 700;
   font-size: 18px;
-  line-height: 27px;
+  line-height: 18px;
   color: $white-color;
   text-align: center;
 }
 
 .coaches__name {
-  margin: 251px 0 0 0;
+  margin: 250px 0 0 0;
 }
 
 .coaches__name-hover {
-  margin: 0 0 10px 0;
+  margin: 0;
 }
 
 .coaches__info {
-  width: 260px;
-  height: 294px;
+  width: 100%;
+  min-height: 294px;
   background: rgba(16, 38, 84, 0.89);
-  padding: 58px 46px;
+  padding: 57px 46px 15px;
   position: absolute;
   top: 0;
   left: 0;
@@ -80,13 +86,13 @@
   line-height: 24px;
   color: #b6bdcc;
   text-align: center;
-  margin: 0 0 66px 0;
+  margin: 0 0 33px 0;
 }
 
 .coaches__info-list {
   color: $white-color;
   list-style-type: disc;
-  padding: 0 0 0 10px;
+  padding: 0 0 0 25px;
 }
 
 .coaches__info-list li {
@@ -95,4 +101,113 @@
   font-size: 14px;
   line-height: 21px;
   color: $white-color;
+  margin-bottom: 13px;
+}
+
+.coaches__info-list li:last-child {
+  margin-bottom: 0;
+}
+
+.coaches__container {
+  position: relative;
+}
+
+.coaches__arrow-left svg,
+.coaches__arrow-right svg {
+  fill: none;
+}
+
+.coaches__arrow-left,
+.coaches__arrow-right {
+  background: none;
+  padding: 0;
+  border: none;
+  cursor: pointer;
+  position: absolute;
+  top: 131px;
+
+  &:hover {
+    opacity: 0.7;
+  }
+}
+
+.coaches__arrow-left {
+  left: -57px;
+}
+
+.coaches__arrow-right {
+  transform: rotate(180deg);
+  right: -57px;
+}
+
+
+@media (max-width: $tablet-width) {
+  .coaches {
+    @include wrap-tablet;
+    padding: 0 100px 101px;
+  }
+
+  .coaches__title {
+    font-size: 42px;
+    line-height: 42px;
+    margin: 0 auto 44px;
+    text-align: center;
+  }
+
+  .coaches__container {
+    width: 566px;
+    margin: 0 auto;
+  }
+
+  .coaches__list {
+    flex-wrap: wrap;
+  }
+
+  .coaches__item {
+    width: 268px;
+    margin-right: 30px;
+    margin-bottom: 30px;
+  }
+
+  .coaches__info {
+    width: 100%;
+    padding: 57px 46px 15px;
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
+
+  .coaches__name-hover {
+    margin-left: -8px;
+  }
+
+  .coaches__info p {
+    margin: 0 0 33px -8px;
+  }
+
+  .coaches__item:nth-child(2n) {
+    margin-right: 0;
+  }
+}
+
+@media (max-width: $mobile-width) {
+  .coaches {
+    @include wrap-mobile;
+    padding: 0 47px 70px;
+  }
+
+  .coaches__title {
+    font-size: 32px;
+    line-height: 32px;
+    margin: 0 auto 50px;
+  }
+
+  .coaches__container {
+    width: 226px;
+  }
+
+  .coaches__item {
+    margin-right: 0;
+  }
+
 }
