--- a/source/sass/blocks/coaches.scss
+++ b/source/sass/blocks/coaches.scss
@@ -38,7 +38,7 @@
   }
 }
 
-.coaches__item:last-child {
+.coaches__item:nth-child(4n) {
   margin-right: 0;
 }
 
@@ -204,7 +204,7 @@
 
   .coaches__container {
     width: 226px;
-    width: 274px;
+    width: 274px
   }
 
   .coaches__item {
