Начат блок преимущества

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -8,6 +8,8 @@
 @import "blocks/subscriptions.scss";
 @import "blocks/competitions.scss";
 @import "blocks/coaches.scss";
+@import "blocks/advantages.scss";
+
 
 
 
