--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -9,8 +9,4 @@
 @import "blocks/competitions.scss";
 @import "blocks/coaches.scss";
 @import "blocks/advantages.scss";
-
-
-
-
-
+@import "blocks/promo.scss";
