--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -48,7 +48,8 @@
   line-height: 26px;
   letter-spacing: 0.03em;
 
-  &:hover {
+  &:hover,
+  &:focus {
     opacity: 0.7;
   }
 }
@@ -106,7 +107,8 @@
   cursor: pointer;
   margin-top: 85px;
 
-  &:hover {
+  &:hover,
+  &:focus {
     opacity: 0.7;
   }
 }
@@ -126,7 +128,8 @@
   display: block;
   margin-top: 20px;
 
-  &:hover {
+  &:hover,
+  &:focus {
     opacity: 0.7;
   }
 }
