--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -1,6 +1,6 @@
 .reviews {
   @include wrap-desktop;
-  padding-bottom: 100px;
+  padding-bottom: 70px;
 }
 
 .reviews__title {
@@ -31,7 +31,7 @@
   border: none;
   cursor: pointer;
   position: absolute;
-  top: 105px;
+  top: 43.4%;
 
   &:hover,
   &:focus {
@@ -60,6 +60,7 @@
   position: relative;
   padding: 54px 62px 57px 170px;
   box-shadow: 0px 0px 40px rgba(28, 51, 116, 0.2);
+  margin-bottom: 30px;
 }
 
 .reviews__avatar {
@@ -86,3 +87,82 @@
   margin: 0;
 }
 
+@media (max-width: $tablet-width) {
+  .reviews {
+    @include wrap-tablet;
+    padding: 0 101px 70px;
+  }
+
+  .reviews__title {
+    font-size: 42px;
+    line-height: 42px;
+    margin: 0 0 44px 0;
+  }
+
+  .reviews__container {
+    width: 100%;
+  }
+
+  .reviews__item {
+    padding: 54px 62px 57px 173px;
+  }
+
+  .reviews__avatar {
+    left: 65px;
+  }
+}
+
+@media (max-width: $mobile-width) {
+  .reviews {
+    @include wrap-mobile;
+    padding: 0 47px 40px;
+  }
+
+  .reviews__title {
+    font-size: 32px;
+    line-height: 32px;
+    margin: 0 0 47px 0;
+  }
+
+  .reviews__person {
+    display: flex;
+  }
+
+  .reviews__avatar {
+    width: 68px;
+    height: 68px;
+    position: static;
+    margin-left: 16px;
+    margin-right: 15px;
+  }
+
+  .reviews__item {
+    padding: 40px 25px 35px;
+  }
+
+  .reviews__item h3 {
+    line-height: 26px;
+    margin-top: 7px;
+  }
+
+  .reviews__item p {
+    text-align: center;
+    margin-top: 11px;
+  }
+
+  .reviews__arrow-left svg,
+  .reviews__arrow-right svg {
+    width: 10px;
+    height: 19px;
+  }
+
+  .reviews__arrow-left {
+    left: -32px;
+    top: 47%;
+  }
+
+  .reviews__arrow-right {
+    right: -32px;
+    top: 47%;
+  }
+}
