--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -11,3 +11,5 @@
 @import "blocks/advantages.scss";
 @import "blocks/promo.scss";
 @import "blocks/reviews.scss";
+@import "blocks/page-footer.scss";
+
