--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -101,6 +101,7 @@
   line-height: 14px;
   display: block;
   width: 234px;
+  text-align: center;
   letter-spacing: 0.05em;
   text-transform: uppercase;
   padding: 19px 0 18px;
