--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -49,9 +49,8 @@
 }
 
 .reviews__list {
- @include list-default;
+  @include list-default;
 }
-
 
 .reviews__item {
   display: block;
@@ -59,7 +58,7 @@
   background-color: #1c3374;
   position: relative;
   padding: 54px 62px 57px 170px;
-  box-shadow: 0px 0px 40px rgba(28, 51, 116, 0.2);
+  box-shadow: 0 0 40px rgba(28, 51, 116, 0.2);
   margin-bottom: 30px;
 }
 
