--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -23,6 +23,7 @@
   font-size: 71px;
   line-height: 71px;
   background: linear-gradient(#d10a42, #0041ca);
+  background-clip: text;
   -webkit-text-fill-color: transparent;
   margin: 0 30px 0 0;
 }
