--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -8,10 +8,7 @@
 }
 
 .advantages__title {
-  font-family: $bebas;
-  font-size: 49px;
-  line-height: 49px;
-  letter-spacing: 0.03em;
+  @include title-desktop;
   color: $dark-blue-color;
   margin: 0 0 60px 0;
   text-align: center;
@@ -159,8 +156,7 @@
   }
 
   .advantages__title {
-    font-size: 42px;
-    line-height: 42px;
+    @include title-tablet;
     margin: 0 0 47px 0;
   }
 
@@ -243,8 +239,7 @@
   }
 
   .advantages__title {
-    font-size: 32px;
-    line-height: 32px;
+    @include title-mobile;
   }
 
   .advantages__description-block h3 {
