--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -5,10 +5,7 @@
 }
 
 .promo__title {
-  font-family: $bebas;
-  font-size: 49px;
-  line-height: 49px;
-  letter-spacing: 0.03em;
+  @include title-desktop
   color: $dark-blue-color;
   text-align: center;
   margin-bottom: 53px;
@@ -142,8 +139,7 @@
   }
 
   .promo__title {
-    font-size: 42px;
-    line-height: 42px;
+    @include title-tablet;
     margin-bottom: 44px;
   }
 
@@ -198,8 +194,7 @@
   }
 
   .promo__title {
-    font-size: 32px;
-    line-height: 32px;
+    @include title-mobile;
     margin-bottom: 45px;
   }
 
