--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -4,10 +4,7 @@
 }
 
 .reviews__title {
-  font-family: $bebas;
-  font-size: 49px;
-  line-height: 49px;
-  letter-spacing: 0.03em;
+  @include title-desktop;
   color: $dark-blue-color;
   text-align: center;
   margin: 0 0 54px 0;
@@ -93,8 +90,7 @@
   }
 
   .reviews__title {
-    font-size: 42px;
-    line-height: 42px;
+    @include title-tablet;
     margin: 0 0 44px 0;
   }
 
@@ -118,8 +114,7 @@
   }
 
   .reviews__title {
-    font-size: 32px;
-    line-height: 32px;
+    @include title-mobile;
     margin: 0 0 47px 0;
   }
 
