--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -33,7 +33,7 @@
   color: $white-color;
   width: 46.3%;
   padding: 8px 0 7px;
-  border-radius: none;
+  border-radius: 0;
 
   &::placeholder {
     font-family: $roboto-condensed;
