--- a/source/sass/blocks/coaches.scss
+++ b/source/sass/blocks/coaches.scss
@@ -6,7 +6,7 @@
 .coaches__title {
   @include title-desktop;
   color: $dark-blue-color;
-  margin: 0 0 54px 0;
+  margin: 0 0 52px 0;
 }
 
 .coaches__info {
@@ -23,8 +23,11 @@
 .coaches__list {
   @include list-default;
   display: flex;
-  flex-wrap: wrap;
   justify-content: flex-start;
+}
+
+.coaches__list--no-js {
+  flex-wrap: wrap;
 }
 
 .coaches__item {
@@ -149,7 +152,7 @@
 
   .coaches__title {
     @include title-tablet;
-    margin: 0 auto 44px;
+    margin: 0 auto 42px;
     text-align: center;
   }
 
@@ -184,7 +187,7 @@
 
   .coaches__title {
     @include title-mobile;
-    margin: 0 auto 45px;
+    margin: 0 auto 44px;
   }
 
   .coaches__item {
