--- a/source/sass/fonts.scss
+++ b/source/sass/fonts.scss
@@ -27,5 +27,13 @@
   font-family: "Bebas Neue";
   font-style: normal;
   font-display: swap;
-  src: url("../fonts/BebasNeue.woff2") format("woff2"), url("../fonts/BebasNeue.woff") format("woff");
+  src: url("../fonts/BebasNeueRegular.woff2") format("woff2"), url("../fonts/BebasNeueRegular.woff") format("woff");
+}
+
+@font-face {
+  font-weight: 700;
+  font-family: "Bebas Neue";
+  font-style: normal;
+  font-display: swap;
+  src: url("../fonts/BebasNeueBold.woff2") format("woff2"), url("../fonts/BebasNeueBold.woff") format("woff");
 }
