--- a/source/sass/blocks/subscriptions.scss
+++ b/source/sass/blocks/subscriptions.scss
@@ -58,6 +58,10 @@
   line-height: 20px;
   cursor: pointer;
   padding-bottom: 13px;
+
+  &:hover {
+    opacity: 0.7;
+  }
 }
 
 .subscriptions__item-month--active {
